add product#show route/view

--- a/views/products/index.pug
+++ b/views/products/index.pug
@@ -19,6 +19,7 @@ html
         li
           a(href='/products/'+product.id)
             p= product.title
+          p= product.createdAt
     include ../partials/foot.pug
 
     
